--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pay Up</title>
+  <title>Welcome</title>
   <link rel="stylesheet" href="payup.css">
 </head>
 <body>
   <h1>Welcome to the pit</h1>
-  <p>I made this shit</p>
+  <h2>I made this shit</h2>
+  <p>By this shit, I mean the buttons below which lead to my other works of all sorts.</p>
   <br></br>
-  <button onclick="alert('AHH AMBATU PAYUP')">Click here to pay up</button>
+  <button onclick="window.open(https://falconwasplaying.github.io/pc.builder)">PC Builder w/Indian Prices</button>
 </body>
 </html>
