--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Welcome</title>
   <link rel="stylesheet" href="payup.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <h1>Welcome to the pit</h1>
