--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <h2>I made this shit</h2>
   <p>By this shit, I mean the buttons below which lead to my other works of all sorts.</p>
   <br></br>
-  <button onclick="window.open("https://falconwasplaying.github.io/pc.builder")">PC Builder w/Indian Prices</button>
+  <button onclick="window.open('https://falconwasplaying.github.io/pc.builder')">PC Builder w/Indian Prices</button>
 </body>
 </html>
