--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-theme="light">
 <head>
-  <title>Welcome</title>
-  <link rel="stylesheet" href="payup.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Theme Toggle</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to the pit</h1>
-  <h2>I made this shit</h2>
-  <p>By this shit, I mean the buttons below which lead to my other works of all sorts.</p>
-  <br></br>
-  <button onclick="window.open('https://falconwasplaying.github.io/pc.builder')">PC Builder w/Indian Prices</button>
+  <input type="checkbox" id="theme-toggle" hidden>
+  <label for="theme-toggle" class="toggle">Toggle Theme</label>
+
+  <div class="content">
+    <h1>Welcome!</h1>
+    <p>This is your themed page 😎</p>
+  </div>
 </body>
 </html>
