--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Theme Toggle</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="payup.css">
 </head>
 <body>
   <input type="checkbox" id="theme-toggle" hidden>
