--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <input type="checkbox" id="theme-toggle" hidden>
-  <label for="theme-toggle" class="toggle"><3</label>
+  <label for="theme-toggle" class="toggle">'<3'</label>
 
   <div class="content">
     <h1>Welcome!</h1>
