--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
-  <meta viewport="width=device-width, initial-scale=1">
+  <meta viewport="width=device-width initial-scale=1">
   <title>Theme Toggle</title>
   <link rel="stylesheet" href="payup.css">
 </head>
