--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
+
 <html lang="en" data-theme="light">
+
 <head>
+
   <meta charset="UTF-8">
   <meta viewport="width=device-width initial-scale=1">
   <title>Theme Toggle</title>
   <link rel="stylesheet" href="payup.css">
+
 </head>
+
 <body>
+
   <input type="checkbox" id="theme-toggle" hidden>
   <label for="theme-toggle" class="toggle">♡</label>
 
   <div class="content">
-    <h1>Welcome!</h1>
-    <p>h</p>
+
+    <h1>Welcome to the pit</h1>
+    <p>I made this shit</p>
+
   </div>
+
 </body>
+
 </html>
