--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" data-theme="light">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-  <input type="checkbox" id="theme-toggle" hidden>
-  <label for="theme-toggle" class="toggle">♡</label>
   <div class="content">
     <h1>Welcome to the pit</h1>
     <p>I made this shit</p>
