--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="content">
-    <h1>Welcome to the pit</h1>
-    <p>I made this shit</p>
+    <h1>Welcome</h1>
+    <p>to the pit, I made this shit</p>
   </div>
 </body>
 
