--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta viewport="width=device-width initial-scale=1">
-  <title>Theme Toggle</title>
+  <title>Hull</title>
   <link rel="stylesheet" href="payup.css">
 </head>
 
