--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta viewport="width=device-width initial-scale=1">
+  <meta viewport="width=device-width, initial-scale=1">
   <title>Welcome</title>
   <link rel="stylesheet" href="payup.css">
 </head>
